# noesis

./: .gitignore  .noesis.example.toml  README.md  pyproject.toml
agent_loop/: __init__.py  config.py  core.py  types.py
agent_loop/llm/: client.py
agent_loop/memory/: consensus.py  event_store.py
agent_loop/tools/: __init__.py  file_ops.py  shell.py
docs/: FILE_SANDBOX_DESIGN.md  PROGRESSIVE_TOOLS_DESIGN.md  TOOL_CALLING_GUIDE.md
examples/: file_ops_demo.py  file_ops_simple.py  sandbox_test.py  tool_calling_example.py
noesis/: __init__.py  call.py  mcp.py  tools.py  tools_builtin.py  types.py
tests/: test_builtin_tools.py  test_call.py  test_call_integration.py  test_config.py  test_mcp.py  test_tools.py  test_types.py
